apps/nomad/nomad-ctrl-plane/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nomad-ctrl-plane-svc
spec:
  ports:
    - name: http-web
      protocol: TCP
      port: 50051
  selector:
    app: nomad-ctrl-plane
